add start of udev/devkit support

--- a/connector/hal/Makefile.am
+++ b/connector/hal/Makefile.am
@@ -1,11 +1,18 @@
 
+halfdi = 10-synce.fdi
+
+if USE_HAL
 haldatadir = ${datadir}/hal/fdi/policy/20thirdparty
-haldata_DATA = 10-synce.fdi
+haldata_DATA = $(halfdi)
 
 haldir = @hal_addon_dir@
+else
+haldir = $(libexecdir)
+endif
+
 hal_SCRIPTS = \
 	hal-synce-rndis \
 	hal-synce-serial 
 
-EXTRA_DIST = $(haldata_DATA)
+EXTRA_DIST = $(halfdi)
 
