--- a/connector/etc/Makefile.am
+++ b/connector/etc/Makefile.am
@@ -1,7 +1,14 @@
 syncedatadir = ${datadir}/synce-hal
 syncedata_DATA = dhclient.conf
 
-dbusservicedir = "`pkg-config --variable=sysconfdir dbus-1`/dbus-1/system.d"
-dbusservice_DATA = org.freedesktop.Hal.Device.Synce.conf
+halservicefile = org.freedesktop.Hal.Device.Synce.conf
+udevservicefile = org.synce.dccm.Device.conf
 
-EXTRA_DIST = $(syncedata_DATA) $(dbusservice_DATA)
+dbusservicedir = "`pkg-config --variable=sysconfdir dbus-1`/dbus-1/system.d"
+if USE_HAL
+dbusservice_DATA = $(halservicefile)
+else
+dbusservice_DATA = $(udevservicefile)
+endif
+
+EXTRA_DIST = $(syncedata_DATA) $(halservicefile) $(udevservicefile)
