--- a/trunk/connector/configure.ac.in
+++ b/trunk/connector/configure.ac.in
@@ -36,34 +36,44 @@ if test "x$early_dbusglib" = "xyes"; then
    AC_DEFINE_UNQUOTED([EARLY_DBUSGLIB], [1], [dbus-glib older than 0.74])
 fi
 
-dnl Check for HAL
-PKG_CHECK_MODULES(HAL, hal)
 
-dnl Check for override of default hal addon dir
-AC_MSG_CHECKING([hal addon dir])
-AC_ARG_WITH(hal-addon-dir, [  --with-hal-addon-dir=PATH     Location of the hal addon scripts.],
-            with_hal_addon_dir="$withval", with_hal_addon_dir="no")
-if test "x${with_hal_addon_dir}" = "xno"; then
-    hal_addon_dir="`pkg-config --variable=libdir hal`/hal/scripts"
+# do we use hal or udev ?
+AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-udev], [Build for udev]),enable_udev="$enableval",enable_udev=no)
+AM_CONDITIONAL(USE_HAL, test "x$enable_udev" = "xno")
+if test "x$enable_udev" = "xno"; then
+    AC_DEFINE(USE_HAL, 1, [Build using hal])
 
-    hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
-    if test $? -ne 0
-    then
-        AC_MSG_ERROR([Automatically determined hal script location ${hal_addon_dir} not in allowed paths, use --with-hal-addon-dir])
-    fi
-    AC_MSG_RESULT([$hal_addon_dir])
-else
-    hal_addon_dir="$with_hal_addon_dir"
+    dnl Check for HAL
+    PKG_CHECK_MODULES(HAL, hal)
 
-    hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
-    if test $? -ne 0
-    then
-        AC_MSG_WARN([Specified hal script location ${hal_addon_dir} not in allowed paths])
-    else
+    dnl Check for override of default hal addon dir
+    AC_MSG_CHECKING([hal addon dir])
+    AC_ARG_WITH(hal-addon-dir, [  --with-hal-addon-dir=PATH     Location of the hal addon scripts.],
+	       with_hal_addon_dir="$withval", with_hal_addon_dir="no")
+    if test "x${with_hal_addon_dir}" = "xno"; then
+        hal_addon_dir="`pkg-config --variable=libdir hal`/hal/scripts"
+
+        hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
+        if test $? -ne 0
+        then
+            AC_MSG_ERROR([Automatically determined hal script location ${hal_addon_dir} not in allowed paths, use --with-hal-addon-dir])
+        fi
         AC_MSG_RESULT([$hal_addon_dir])
+    else
+        hal_addon_dir="$with_hal_addon_dir"
+
+        hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
+        if test $? -ne 0
+        then
+            AC_MSG_WARN([Specified hal script location ${hal_addon_dir} not in allowed paths])
+        else
+            AC_MSG_RESULT([$hal_addon_dir])
+        fi
     fi
+    AC_SUBST(hal_addon_dir)
+else
+    PKG_CHECK_MODULES(GUDEV, gudev-1.0)
 fi
-AC_SUBST(hal_addon_dir)
 
 
 AC_ARG_ENABLE(bluetooth-support, AC_HELP_STRING([--enable-bluetooth-support], [Build in bluetooth support]),enable_bluetooth_support="$enableval",enable_bluetooth_support=no)
@@ -81,6 +91,9 @@ AS_AC_EXPAND(DATADIR, "$datadir")
 AC_CONFIG_FILES([
         hal/hal-synce-rndis \
         hal/hal-synce-serial \
+        udev/synce-udev-rndis \
+        udev/synce-udev-serial \
+        udev/synce.rules \
         bluetooth/hal-synce-bluetooth \
         bluetooth/synce-bt-ipup \
         bluetooth/synce-bt-ipdown \
@@ -91,5 +104,6 @@ AC_OUTPUT([
 	hal/Makefile
 	src/Makefile
 	etc/Makefile
+	udev/Makefile
 	bluetooth/Makefile
 ])
