--- a/connector/configure.ac.in
+++ b/connector/configure.ac.in
@@ -1,5 +1,5 @@
 AC_PREREQ(2.52)
-AC_INIT(synce-hal, @@VERSION@@)
+AC_INIT(synce-connector, @@VERSION@@)
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_SRCDIR(src/main.c)
 AM_INIT_AUTOMAKE
