--- a/trunk/connector/etc/Makefile.am
+++ b/trunk/connector/etc/Makefile.am
@@ -2,7 +2,7 @@ syncedatadir = ${datadir}/synce-hal
 syncedata_DATA = dhclient.conf
 
 halservicefile = org.freedesktop.Hal.Device.Synce.conf
-udevservicefile = org.synce.dccm.Device.conf
+udevservicefile = org.synce.dccm.conf
 
 dbusservicedir = "`pkg-config --variable=sysconfdir dbus-1`/dbus-1/system.d"
 if USE_HAL
