--- a/trunk/connector/etc/org.synce.dccm.conf
+++ b/trunk/connector/etc/org.synce.dccm.conf
@@ -14,8 +14,7 @@
   <!-- Allow anyone to invoke methods on it. -->
   <policy context="default">
     <allow send_destination="org.synce.dccm"
-	   send_interface="org.synce.dccm"/>
+	   send_interface="org.synce.dccm.Device"/>
   </policy>
 
 </busconfig>
-
