--- a/trunk/connector/etc/org.freedesktop.Hal.Device.Synce.conf
+++ b/trunk/connector/etc/org.freedesktop.Hal.Device.Synce.conf
@@ -4,7 +4,7 @@
 <busconfig>
 
   <!-- This configuration file specifies the required security policies
-       for synce-hal to work. -->
+       for synce to work. -->
 
   <!-- Allow anyone to invoke methods on the Synce interface -->
   <policy context="default">
