--- a/connector/etc/dhclient.conf
+++ b/connector/etc/dhclient.conf
@@ -1,4 +1,4 @@
-# Configuration file for dhclient for synce-hal
+# Configuration file for dhclient for synce-connector
 #
 # We override the system file with this one to
 # ensure it is as simple as possible
