--- a/connector/bluetooth/hal-synce-bluetooth.in
+++ b/connector/bluetooth/hal-synce-bluetooth.in
@@ -11,7 +11,7 @@ import platform
 import ConfigParser
 
 # defaults
-config_file = '@SYSCONFDIR@/synce-hal.conf'
+config_file = '@SYSCONFDIR@/synce-connector.conf'
 log_level = logging.WARNING
 local_ip = "192.168.132.102"
 device_ip = "192.168.132.201"
