--- a/connector/scripts/hal-synce-serial.in
+++ b/connector/scripts/hal-synce-serial.in
@@ -11,13 +11,15 @@ import platform
 import ConfigParser
 import dbus
 
+sys.path.insert(0,"@DATADIR@/@PACKAGE_NAME@")
+import synceconnector
+from synceconnector import run_dccm, process_config
+
 # defaults
 config_file = '@SYSCONFDIR@/synce-connector.conf'
 log_level = logging.WARNING
-default_network = "192.168.131"
+DEFAULT_SERIAL_NETWORK = "192.168.131"
 pppopts = ["nodefaultroute", "noauth", "local", "crtscts"]
-
-device_path = False
 
 # ppp setup
 #
@@ -104,39 +106,10 @@ def synce_serial_stop_device(linkname):
         time.sleep(3)
 
 
-#
-# run dccm after the interface is configured
-#
-def RunDccm(device_ip, local_ip):
-
-    logger.debug("starting hal-dccm ...")
-
-    dccm_log_level = "1"
-
-    if log_level <= logging.DEBUG:
-        dccm_log_level = "6"
-    elif log_level <= logging.INFO:
-        dccm_log_level = "4"
-    elif log_level <= logging.WARNING:
-        dccm_log_level = "3"
-
-    cmd_list = ["@LIBEXECDIR@/hal-dccm", "--device-path="+device_path, "--device-ip="+device_ip, "--local-ip="+local_ip, "--log-level="+dccm_log_level]
-
-    logger.debug("calling hal-dccm as:")
-    logger.debug(cmd_list)
-
-    try:
-        os.execv("@LIBEXECDIR@/hal-dccm", cmd_list)
-    except Exception,e:
-        logger.error("failed to exec hal-dccm !!: %s" % e)
-
-    return
-
-
-def ProcessConfig():
+def process_config():
 
     global log_level
-    global default_network
+    global DEFAULT_SERIAL_NETWORK
     global pppopts
 
     logger = logging.getLogger("hal-synce-serial")
@@ -176,7 +149,7 @@ def ProcessConfig():
         network_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         network_match = network_re.match(new_network)
         if network_match != None:
-            default_network = new_network
+            DEFAULT_SERIAL_NETWORK = new_network
         else:
             logger.warning("found invalid network in config file %s: %s" % (config_file, new_network))
 
@@ -197,6 +170,8 @@ if __name__ == '__main__':
     syslog_form = logging.Formatter('%(name)s[%(process)d] %(levelname)s : %(message)s')
     sys_log.setFormatter(syslog_form)
     logger.addHandler(sys_log)
+
+    device_path = False
 
     if os.environ.has_key("HALD_ACTION"):
         action = os.environ["HALD_ACTION"]
@@ -337,7 +312,7 @@ if __name__ == '__main__':
         logger.critical("Environment not set, action is missing")
         sys.exit(1)
 
-    ProcessConfig()
+    process_config()
 
 
     if stat.S_ISCHR(os.stat(device_file).st_mode) == 0:
@@ -364,8 +339,8 @@ if __name__ == '__main__':
     if action == "add":
         logger.debug("running as addon for device "+device_file)
 
-        local_ip = default_network+"."+str(int(devnum) + 1)
-        remote_ip = default_network+"."+str(int(devnum) + 129)
+        local_ip = DEFAULT_SERIAL_NETWORK+"."+str(int(devnum) + 1)
+        remote_ip = DEFAULT_SERIAL_NETWORK+"."+str(int(devnum) + 129)
 
         if synce_serial_start_device(device_file, local_ip, remote_ip, linkname) == False:
             logger.critical("failed to establish serial connection, aborting...")
@@ -373,7 +348,7 @@ if __name__ == '__main__':
 
         logger.debug("successfully configured interface")
 
-        RunDccm(remote_ip, local_ip)
+        run_dccm(device_path, remote_ip, local_ip, False)
 
         logger.error("aborting ...")
         sys.exit(1)
