--- a/connector/scripts/synceconnector.py.in
+++ b/connector/scripts/synceconnector.py.in
@@ -1,5 +1,7 @@
 
 import os
+import stat
+import platform
 import re
 import subprocess
 import logging, logging.handlers
@@ -8,7 +10,7 @@ import ConfigParser
 
 # defaults
 config_file = '@SYSCONFDIR@/synce-connector.conf'
-log_level = logging.WARNING
+log_level = logging.DEBUG
 logger = None
 
 # rndis network defaults
@@ -16,6 +18,16 @@ DEFAULT_RNDIS_DEVICE_IP = "169.254.2.1"
 DEFAULT_RNDIS_LOCAL_IP = "169.254.2.2"
 DEFAULT_RNDIS_NETMASK = "255.255.255.0"
 DEFAULT_RNDIS_BROADCAST = "169.254.2.255"
+
+# serial defaults
+DEFAULT_SERIAL_NETWORK = "192.168.131"
+pppopts = ["nodefaultroute", "noauth", "local", "crtscts"]
+
+# ppp setup
+#
+PPPD = "@PPPDPATH@"
+VAR_PPP = "/var/run"
+DEVSPEED = '115200'
 
 
 #
@@ -45,7 +57,7 @@ def get_logger(log_name):
 def rndis_static_config(iface):
 
     logger.debug("attempting static ip configuration")
-    cmd_list = ["ifconfig",iface,DEFAULT_RNDIS_LOCAL_IP,"netmask",DEFAULT_RNDIS_NETMASK,"broadcast",DEFAULT_RNDIS_BROADCAST]
+    cmd_list = ["@IFCONFIGPATH@",iface,DEFAULT_RNDIS_LOCAL_IP,"netmask",DEFAULT_RNDIS_NETMASK,"broadcast",DEFAULT_RNDIS_BROADCAST]
 
     # returns a Popen object
     try:
@@ -78,9 +90,9 @@ def rndis_dhcp_config(iface):
 
     pidfile = "@LOCALSTATEDIR@/run/dhclient-synce-"+iface+".pid"
     leasefile = "@LOCALSTATEDIR@/run/dhclient-synce-"+iface+".lease"
-    configfile = "@DATADIR@/@PACKAGE_NAME@/dhclient.conf"
+    configfile = "@SYNCEDATADIR@/dhclient.conf"
 
-    cmd_list = ["dhclient","-pf",pidfile,"-lf",leasefile,"-cf",configfile,iface]
+    cmd_list = ["@DHCLIENTPATH@","-pf",pidfile,"-lf",leasefile,"-cf",configfile,iface]
 
     device_ip = False
     local_ip = False
@@ -129,13 +141,13 @@ def rndis_dhcp_unconfig(iface):
 
     pidfile = "@LOCALSTATEDIR@/run/dhclient-synce-"+iface+".pid"
     leasefile = "@LOCALSTATEDIR@/run/dhclient-synce-"+iface+".lease"
-    configfile = "@DATADIR@/@PACKAGE_NAME@/dhclient.conf"
+    configfile = "@SYNCEDATADIR@/dhclient.conf"
 
     if os.path.isfile(pidfile) != True:
         logger.debug("no pid file %s, not releasing", pidfile)
         return False
 
-    cmd_list = ["dhclient","-r","-pf",pidfile,"-lf",leasefile,"-cf",configfile,iface]
+    cmd_list = ["@DHCLIENTPATH@","-r","-pf",pidfile,"-lf",leasefile,"-cf",configfile,iface]
 
     # returns a Popen object
     try:
@@ -152,6 +164,113 @@ def rndis_dhcp_unconfig(iface):
         return True
 
     logger.debug("released dhcp lease")
+    return True
+
+
+# calculate "device number" from the device file
+#
+def serial_get_devnum(device_file):
+
+    if stat.S_ISCHR(os.stat(device_file).st_mode) == 0:
+        logger.critical("unable to find a character device named "+device_file)
+        return -1
+
+    devnum_re = re.compile('^[^0-9]*([0-9]*)$')
+    devnum_match = devnum_re.match(device_file)
+    if devnum_match != None:
+        devnum = devnum_match.group(1)
+    else:
+        devnum = 0
+
+    # Add 120 for /dev/ttyS*, to support both standard serial
+    # and USB
+    serial_re = re.compile('ttyS')
+    serial_match = serial_re.match(device_file)
+    if serial_match != None:
+        devnum = int(devnum) + 120
+
+    return devnum
+
+# get standard IP addresses
+#
+def serial_get_address(device_num):
+    local_ip = DEFAULT_SERIAL_NETWORK+"."+str(int(device_num) + 1)
+    remote_ip = DEFAULT_SERIAL_NETWORK+"."+str(int(device_num) + 129)
+    return local_ip, remote_ip
+
+
+# stop pppd
+#
+def serial_stop_device(linkname):
+
+    pidfile = VAR_PPP+"/ppp-"+linkname+".pid"
+
+    if os.path.isfile(pidfile) != True:
+        logger.warning("unable find a running SynCE connection for %d", linkname)
+        return False
+
+    while os.path.isfile(pidfile):
+        try:
+            f = open(pidfile, 'r')
+            textpid = f.readline().rstrip()
+            f.close()
+        except Exception, e:
+            logger.warning("unable to read PID from %s: %s", pidfile, e)
+            return False
+
+        try:
+            pid = int(textpid)
+        except Exception, e:
+            logger.error("found invalid PID in %s: %s", pidfile, e)
+            return False
+
+        logger.info("killing process with PID %d", pid)
+
+        try:
+            os.kill(pid, signal.SIGTERM)
+        except Exception,e:
+            logger.error("unable stop the SynCE connection with PID %d: %s", pid, e)
+            return False
+
+        logger.info("requested shutdown of %s", linkname)
+
+        time.sleep(3)
+
+    return True
+
+# start pppd
+#
+def serial_start_device(device_file, local_ip, remote_ip, linkname):
+
+    ipaddr = local_ip+":"+remote_ip
+
+    cmd_list = [PPPD, device_file, DEVSPEED, "connect", "@LIBEXECDIR@/synce-serial-chat", ipaddr, "ms-dns", local_ip]
+    for item in pppopts:
+        cmd_list.append(item)
+
+    if platform.system() != "FreeBSD":
+        cmd_list.append("linkname")
+        cmd_list.append(linkname)
+
+    logger.debug("calling pppd as:")
+    logger.debug(cmd_list)
+
+    # Now bring up the connection
+
+    # returns a Popen object
+    try:
+        proc = subprocess.Popen(cmd_list, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
+        output_text = proc.communicate()[0]
+    except Exception,e:
+        logger.error("failure running pppd: %s" % e)
+        return False
+
+    rc = proc.returncode
+
+    if rc != 0:
+        logger.error("failed to initialize ppp connection, return code %d",rc)
+        return False
+
     return True
 
 
@@ -193,6 +312,8 @@ def process_config():
     global DEFAULT_RNDIS_LOCAL_IP
     global DEFAULT_RNDIS_NETMASK
     global DEFAULT_RNDIS_BROADCAST
+    global DEFAULT_SERIAL_NETWORK
+    global pppopts
 
     config = ConfigParser.ConfigParser()
     try:
@@ -257,6 +378,21 @@ def process_config():
             DEFAULT_RNDIS_BROADCAST = new_ip
         else:
             logger.warning("found invalid broadcast in config file %s: %s" % (config_file, new_ip))
+
+    if config.has_option('serial', 'pppopts'):
+        extra_opts = config.get('serial', 'pppopts').split()
+        for item in extra_opts:
+            pppopts.append(item)
+
+    if config.has_option('serial', 'network'):
+        new_network = config.get('serial', 'network')
+        
+        network_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}$)')
+        network_match = network_re.match(new_network)
+        if network_match != None:
+            DEFAULT_SERIAL_NETWORK = new_network
+        else:
+            logger.warning("found invalid network in config file %s: %s" % (config_file, new_network))
 
     return True
 
